--- a/frontend/src/components/menu/menu.css
+++ b/frontend/src/components/menu/menu.css
@@ -34,28 +34,33 @@
 }
 
 .menu > .header > .title {
-    font-size: 30px;
-    padding-top: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 1.8em;
+    font-weight: 300;
+    text-transform: uppercase;
 }
-
+  
 .menu > .header > .title > .title1 {
-    padding-top: 20px;
-    /* font-family: "Montserrat", sans-serif; */
     font-weight: 600;
-    /* font-size: 80px; */
 }
 
 .menu > .header > .title > .title2 {
-    padding-top: 20px;
-    /* font-family: "Montserrat", sans-serif; */
     font-weight: 100;
     font-style: italic;
-    /* font-size: 80px; */
 }
 
-.menu > .header > .title > .title3 {
-    padding-top: 20px;
-    /* font-family: "Montserrat", sans-serif; */
-    font-weight: 100;
-    /* font-size: 80px; */
+.menu > .header > .title > .subtitle {
+    display: inline-block;
+    margin-left: 8px;
+    font-weight: 400;
 }
+
+.menu > .header > .title > .site-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 1000px;
+    margin-right: 12px;
+}
+  
