--- a/frontend/src/components/projects-introduction/projects-introduction.css
+++ b/frontend/src/components/projects-introduction/projects-introduction.css
@@ -96,25 +96,27 @@
 }
 
 .projects-scroll-container > .title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   font-size: 2.3em;
   font-weight: 300;
   text-transform: uppercase;
+  margin-bottom: 12px;
 }
 
 .projects-scroll-container > .title > .title1 {
-  padding-top: 20px;
   font-weight: 600;
 }
 
 .projects-scroll-container > .title > .title2 {
-  padding-top: 20px;
   font-weight: 100;
   font-style: italic;
 }
 
 .projects-scroll-container > .title > .subtitle {
   display: inline-block;
-  margin-left: 16px;
+  margin-left: 12px;
   font-weight: 400;
 }
 
@@ -181,3 +183,11 @@
 .project-intro-description {
   font-size: 0.85em;
 }
+
+.projects-scroll-container > .title > .site-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 1000px;
+  margin-right: 16px;
+}
+
